--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.33.0
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.4.2
-matplotlib==3.8.4
-fpdf==1.7.2
-python-dateutil==2.9.0.post0
+streamlit
+pandas
+numpy
+scikit-learn
+matplotlib
+fpdf
+python-dateutil
